--- a/package.json
+++ b/package.json
@@ -53,22 +53,22 @@
     "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.0",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/lodash.get": "^4.4.6",
-    "@types/lodash.has": "^4.5.6",
-    "@types/lodash.isempty": "^4.4.6",
-    "@types/lodash.isequal": "^4.5.5",
-    "@types/lodash.isnil": "^4.0.6",
-    "@types/lodash.merge": "^4.6.6",
-    "@types/lodash.mergewith": "^4.6.6",
-    "@types/lodash.omit": "^4.5.6",
-    "@types/lodash.omitby": "^4.6.6",
-    "@types/lodash.pick": "^4.4.6",
-    "@types/lodash.uniqueid": "^4.0.7",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "~0.63.2",
-    "@types/tinycolor2": "^1.4.2",
-    "@types/use-sync-external-store": "^0.0.3",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/lodash.get": "^4.4.9",
+    "@types/lodash.has": "^4.5.9",
+    "@types/lodash.isempty": "^4.4.9",
+    "@types/lodash.isequal": "^4.5.8",
+    "@types/lodash.isnil": "^4.0.9",
+    "@types/lodash.merge": "^4.6.9",
+    "@types/lodash.mergewith": "^4.6.7",
+    "@types/lodash.omit": "^4.5.9",
+    "@types/lodash.omitby": "^4.6.9",
+    "@types/lodash.pick": "^4.4.9",
+    "@types/lodash.uniqueid": "^4.0.9",
+    "@types/react": "^18.2.0",
+    "@types/react-native": "0.72.8",
+    "@types/tinycolor2": "^1.4.6",
+    "@types/use-sync-external-store": "^0.0.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "commitlint": "^8.3.5",
     "eslint": "^7.10.0",
@@ -85,10 +85,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-svg": "^12.1.0",
-    "react-native-web": "^0.17.7",
-    "react-test-renderer": "^16.9.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "^13.10.5",
+    "react-test-renderer": "18.2.0",
     "release-it": "^13.5.8",
     "rollup": "^2.34.1",
     "rollup-plugin-flow": "^1.1.1",
