--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "pod-install": "^0.1.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.0.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-svg": "^14.1.0",
@@ -98,9 +98,9 @@
   "peerDependencies": {
     "@types/react": "*",
     "@types/react-native": "*",
-    "react": "*",
-    "react-dom": "*",
-    "react-native": "*",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
     "react-native-safe-area-context": "*",
     "react-native-svg": "*"
   },
