--- a/package.json
+++ b/package.json
@@ -96,13 +96,13 @@
     "visualize-bundle": "^1.4.0"
   },
   "peerDependencies": {
-    "@types/react": "*",
-    "@types/react-native": "*",
+    "@types/react": "18.2.0",
+    "@types/react-native": "0.72.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-safe-area-context": "*",
-    "react-native-svg": "*"
+    "react-native-safe-area-context": "4.10.8",
+    "react-native-svg": "14.1.0"
   },
   "jest": {
     "preset": "jest-expo",
@@ -177,26 +177,26 @@
     ]
   },
   "dependencies": {
-    "@react-aria/visually-hidden": "^3.2.1",
-    "@react-native-aria/button": "^0.2.4",
-    "@react-native-aria/checkbox": "^0.2.3",
-    "@react-native-aria/combobox": "^0.2.4-alpha.0",
-    "@react-native-aria/focus": "^0.2.6",
-    "@react-native-aria/interactions": "^0.2.2",
-    "@react-native-aria/listbox": "^0.2.4-alpha.3",
-    "@react-native-aria/overlays": "^0.3.3",
-    "@react-native-aria/radio": "^0.2.4",
-    "@react-native-aria/slider": "^0.2.5-alpha.1",
-    "@react-native-aria/tabs": "^0.2.7",
-    "@react-native-aria/utils": "^0.2.8",
-    "@react-stately/checkbox": "3.0.3",
-    "@react-stately/collections": "3.3.0",
-    "@react-stately/combobox": "3.0.0-alpha.1",
-    "@react-stately/radio": "3.2.1",
-    "@react-stately/slider": "3.0.1",
-    "@react-stately/tabs": "3.0.0-alpha.1",
-    "@react-stately/toggle": "3.2.1",
-    "inline-style-prefixer": "^6.0.1",
+    "@react-aria/visually-hidden": "^3.8.12",
+    "@react-native-aria/button": "^0.2.7",
+    "@react-native-aria/checkbox": "^0.2.9",
+    "@react-native-aria/combobox": "^0.2.6",
+    "@react-native-aria/focus": "^0.2.9",
+    "@react-native-aria/interactions": "^0.2.13",
+    "@react-native-aria/listbox": "^0.2.6",
+    "@react-native-aria/overlays": "^0.3.14",
+    "@react-native-aria/radio": "^0.2.10",
+    "@react-native-aria/slider": "^0.2.11",
+    "@react-native-aria/tabs": "^0.2.10",
+    "@react-native-aria/utils": "^0.2.11",
+    "@react-stately/checkbox": "3.6.5",
+    "@react-stately/collections": "3.10.7",
+    "@react-stately/combobox": "3.8.4",
+    "@react-stately/radio": "3.10.4",
+    "@react-stately/slider": "3.5.4",
+    "@react-stately/tabs": "3.6.6",
+    "@react-stately/toggle": "3.7.4",
+    "inline-style-prefixer": "^7.0.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
